test/corpus/extension.rkt
===
extension
===

#lang racket
#lang typed/racket
#lang racket1001001
#reader 123
#!r6rs

---
(program
  (extension
    (lang_name))
  (extension
    (lang_name))
  (extension
    (lang_name))
  (extension
    (number))
  (extension
    (lang_name)))

===
lang name must not start with slash
===
#lang /foo

---

(program
  (ERROR))
